kubernetes/apps/storage/garage/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: garage
  annotations:
    external-dns.alpha.kubernetes.io/hostname: s3.goyangi.io
spec:
  hostnames:
    - s3.goyangi.io
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: garage
          port: 3900
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: garage-admin
spec:
  hostnames:
    - garage-admin.goyangi.io
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: garage
          port: 3903
